--- a/app/views/users/create_user.erb
+++ b/app/views/users/create_user.erb
@@ -3,7 +3,7 @@
 <form action="/signup" method="post">
     <input type="text" name="username" placeholder="username"><br>
     <input type="text" name="email" placeholder="email"><br>
-    <input type="password" placeholder="password"><br>
+    <input type="password" name="password" placeholder="password"><br>
 
     <button type="submit">Create Account</button>
 </form>
