--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -2,7 +2,7 @@
 
 <form action="/login" method="post">
     <input type="text" name="username" placeholder="username"><br>
-    <input type="password" placeholder="password"><br>
+    <input type="password" name="password" placeholder="password"><br>
 
     <button type="submit">Log me in!</button>
 </form>
