--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -60,6 +60,21 @@
     width: 60%; /* 480px / 800px */
   }
 
+  label, textarea {
+    padding-top: 10px;
+    display: block;
+    font-size: 12px;
+    letter-spacing: 1px;
+  }
+
+  textarea {
+    padding: 10px;
+    line-height: 1.5;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+    box-shadow: 1px 1px 1px #999;
+  }
+
   .sidebar {
     background: #eee;
     border: 1px solid #ccc;
