change animal last sighting type to text

--- a/app/views/animals/create_animal.erb
+++ b/app/views/animals/create_animal.erb
@@ -8,7 +8,7 @@
     <input type="text" name="animal_type"><br>
 
     <label for="last_sighting"> When was it last seen? </label>
-    <input type="integer" name="animal_last_sighting"><br>
+    <input type="text" name="animal_last_sighting"><br>
 
     <label for="animal_description"> Please describe the animal: </label>
     <textarea name="animal description" rows="10" cols="33" wrap="hard"></textarea><br>
