add styling for buttons

--- a/app/views/animals/animals.erb
+++ b/app/views/animals/animals.erb
@@ -7,4 +7,6 @@
     <% end %>
 </ol><br>
 
-<a href="/animals/new">Add Another?</a>
+<form action="/animals/new" method="get">
+    <button class="button" type="submit">Add Another?</button>
+</form>
