--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -4,5 +4,5 @@
     <input type="text" name="username" placeholder="username"><br>
     <input type="password" name="password" placeholder="password"><br>
 
-    <button type="submit">Log me in!</button>
+    <button class="button" type="submit">Log me in!</button>
 </form>
