--- a/app/views/users/create_user.erb
+++ b/app/views/users/create_user.erb
@@ -5,5 +5,5 @@
     <input type="text" name="email" placeholder="email"><br>
     <input type="password" name="password" placeholder="password"><br>
 
-    <button type="submit">Create Account</button>
+    <button class="button" type="submit">Create Account</button>
 </form>
