style the edit button

--- a/app/views/animals/edit.erb
+++ b/app/views/animals/edit.erb
@@ -15,5 +15,5 @@
     <label for="animal_description"> Please describe the animal: </label>
     <textarea name="description" value="<%= @animal.description %>" rows="10" cols="33" wrap="hard"></textarea><br>
 
-    <button type="submit">Save Changes</button>
+    <button class="button" type="submit">Save Changes</button>
 </form>
