show buttons side by side & color the delete button red

--- a/app/views/animals/show.erb
+++ b/app/views/animals/show.erb
@@ -11,5 +11,5 @@
 <!-- delete button -->
 <form action="/animals/<%= @animal.id %>/delete" method="post">
     <input type="hidden" name="_method" value="delete">
-    <button class="button" type="submit">Delete</button>
+    <button style="background-color: red" class="button" type="submit">Delete</button>
 </form>
