--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,3 +1,5 @@
+<img src="/images/animals-3546011_1920.jpg" alt="Little animal figurines in a yellow background">
+
 <% if logged_in? %>
 
     <p> Welcome, <%= current_user.username %></p>
