--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -60,9 +60,39 @@
     width: 60%; /* 480px / 800px */
   }
 
-  img {
+  /* start of index page styles */
+
+  .container {
+    position: relative;
     width: 100%;
   }
+
+  .container img {
+    width: 100%;
+    height: auto;
+  }
+
+  .container .btn-absolute {
+    position: absolute;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    background-color: #f1f1f1;
+    color: black;
+    font-size: 16px;
+    padding: 16px 30px;
+    border: none;
+    cursor: pointer;
+    border-radius: 5px;
+    text-align: center;
+  }
+
+  .container .btn-absolute:hover {
+    background-color: black;
+    color: white;
+  }
+
+  /* end of index page styles */
 
   /* shows edit & delete buttons side by side */
   form {
