--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -51,6 +51,36 @@
     margin-bottom: 18px;
   }
 
+  /* styling the navigation bar */
+
+  .navbar ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
+    display: block;
+  }
+
+  .navbar li {
+    float: left;
+  }
+
+  .navbar li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+  }
+
+  .navbar li a:hover {
+    background-color: #F8E969;
+    color: #111;
+  }
+
+  /* end styling navbar */
+
   .main {
     overflow: hidden;
   }
