--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,3 +1,5 @@
+ @import url('https://fonts.googleapis.com/css?family=Mukta');
+
 @media screen {
   /* --- Reset Styles --- */
   * {
@@ -33,6 +35,7 @@
   h1 {
     font-size: 36px;
     line-height: 54px;
+    font-family: 'Mukta', sans-serif;
   }
 
   h2 {
@@ -40,15 +43,18 @@
     font-size: 24px;
     line-height: 36px;
     margin-bottom: 16px;
+    font-family: 'Mukta', sans-serif;
   }
 
   h3 {
     font-size: 18px;
     line-height: 36px;
+    font-family: 'Mukta', sans-serif;
   }
 
   p {
     margin-bottom: 18px;
+    font-family: 'Mukta', sans-serif;
   }
 
   /* styling the navigation bar */
@@ -64,6 +70,7 @@
 
   .navbar li {
     float: left;
+    font-family: 'Mukta', sans-serif;
   }
 
   .navbar li a {
