remove repetition & style a button

--- a/app/views/animals/create_animal.erb
+++ b/app/views/animals/create_animal.erb
@@ -13,5 +13,5 @@
     <label for="animal_description"> Please describe the animal: </label>
     <textarea name="description" rows="10" cols="33" wrap="hard"></textarea><br>
 
-    <button type="submit">Create Animal</button>
+    <button class="button" type="submit">Create Animal</button>
 </form>
