--- a/app/views/animals/show.erb
+++ b/app/views/animals/show.erb
@@ -1,4 +1,4 @@
-<h1><%= @animal.name %></h1>
+<h1 id="animal-name"><%= @animal.name %></h1>
 <p><%= @animal.animal_type %><br>
 <p><%= @animal.last_sighting %><br>
 <p><%= @animal.description %><br>
