--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,4 +1,5 @@
  @import url('https://fonts.googleapis.com/css?family=Mukta');
+ @import url('https://fonts.googleapis.com/css?family=Bitter');
 
 @media screen {
   /* --- Reset Styles --- */
@@ -16,7 +17,7 @@
   /* --- Welcome Page Styles --- */
   body {
     background-color: lightblue;
-    color: #333;
+    color: #817b7b;
     font-family: 'Mukta', sans-serif;
     line-height: 18px;
   }
@@ -51,6 +52,10 @@
 
   p {
     margin-bottom: 18px;
+  }
+
+  #animal-name {
+    font-family: 'Bitter', sans-serif;
   }
 
   /* styling the navigation bar */
