--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -31,6 +31,7 @@
       <ul>
         <li><a href="/login">Log In</a></li>
         <li><a href="/signup">Sign Up</a></li>
+        <li><a href="/">Home</a></li>
       </ul>
 
       <% end %>
