--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -38,6 +38,15 @@
 
     </div>
 
+        <!-- for sinatra-flash -->
+    <% flash.keys.each do |type| %>
+      <div data-alert class="flash <%= type %> alert-box radius">
+        <%= flash[type] %>
+        <a href="" class="close">&times;</a> <!-- this is the link that appears with the flash message -->
+      </div>
+    <% end %>
+
+
     <div class="wrapper">
 
         <%= yield %>
