add styles & last sighting text next to variable

--- a/app/views/animals/show.erb
+++ b/app/views/animals/show.erb
@@ -1,6 +1,6 @@
 <h1 id="animal-name"><%= @animal.name %></h1>
 <p><%= @animal.animal_type %><br>
-<p><%= @animal.last_sighting %><br>
+<p>Last Sighting: <%= @animal.last_sighting %><br>
 <p><%= @animal.description %><br>
 
 <!-- edit button -->
