--- a/app/views/animals/animals.erb
+++ b/app/views/animals/animals.erb
@@ -3,7 +3,7 @@
 <h2>All Added Extinct Animals</h2>
 <ol>
     <% Animal.all.each do |animal| %>
-        <li><a href="/animals/<%= animal.id %>"><%= animal.name %></a> added by <%= animal.user[:username] %></li>
+        <li id="animal-added-by"><a href="/animals/<%= animal.id %>" id="extinct-animal"><%= animal.name %></a> added by <%= animal.user[:username] %></li>
     <% end %>
 </ol><br>
 
